[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/dynFont-courses.tres" type="DynamicFont" id=1]
[ext_resource path="res://draw.gd" type="Script" id=2]
[ext_resource path="res://FileDialog.gd" type="Script" id=3]
[ext_resource path="res://fonts/dynFont-tags.tres" type="DynamicFont" id=4]

[node name="PanelContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1193.0
margin_bottom = 713.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 300

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer"]
margin_right = 626.0
margin_bottom = 706.0
size_flags_vertical = 3
split_offset = 580

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer/VSplitContainer"]
margin_right = 626.0
margin_bottom = 662.0
size_flags_stretch_ratio = 1.62

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/VSplitContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 619.0
margin_bottom = 655.0

[node name="sampleCategory" type="PanelContainer" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer"]
margin_right = 612.0
margin_bottom = 134.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/sampleCategory"]
margin_left = 7.0
margin_top = 7.0
margin_right = 605.0
margin_bottom = 127.0

[node name="categorySelection" type="OptionButton" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/sampleCategory/VBoxContainer"]
unique_name_in_owner = true
margin_right = 598.0
margin_bottom = 20.0
text = "Select here"

[node name="toggle" type="HBoxContainer" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/sampleCategory/VBoxContainer"]
margin_top = 24.0
margin_right = 598.0
margin_bottom = 48.0

[node name="CheckBox" type="CheckBox" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/sampleCategory/VBoxContainer/toggle"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/sampleCategory/VBoxContainer/toggle"]
margin_left = 28.0
margin_top = 5.0
margin_right = 298.0
margin_bottom = 19.0
text = "-long-name-turururur-long-name-turururur"

[node name="content" type="VBoxContainer" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/sampleCategory/VBoxContainer"]
margin_top = 52.0
margin_right = 598.0
margin_bottom = 120.0

[node name="Label2" type="Label" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/sampleCategory/VBoxContainer/content"]
margin_right = 598.0
margin_bottom = 14.0
text = "-long-name-turururur-long-name-turururur"

[node name="Label3" type="Label" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/sampleCategory/VBoxContainer/content"]
margin_top = 18.0
margin_right = 598.0
margin_bottom = 32.0
text = "-long-name-turururur-long-name-turururur"

[node name="Label4" type="Label" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/sampleCategory/VBoxContainer/content"]
margin_top = 36.0
margin_right = 598.0
margin_bottom = 50.0
text = "-long-name-turururur-long-name-turururur"

[node name="Label5" type="Label" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/sampleCategory/VBoxContainer/content"]
margin_top = 54.0
margin_right = 598.0
margin_bottom = 68.0
text = "-long-name-turururur-long-name-turururur"

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 612.0
margin_bottom = 158.0

[node name="Label3" type="Label" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 136.0
margin_bottom = 17.0
text = "AVAILABLE COURSES:"

[node name="Button" type="Button" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 231.0
margin_bottom = 20.0
text = "Import JSON"

[node name="FileDialog" type="FileDialog" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/HBoxContainer/Button"]
margin_right = 315.0
margin_bottom = 131.5
rect_min_size = Vector2( 250, 87.5 )
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.json ; JSON files", "*.txt ; TXT files" )
script = ExtResource( 3 )
mainControllerPath = NodePath("../../../../../../PanelContainer")

[node name="AcceptDialog3" type="AcceptDialog" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/HBoxContainer/Button/FileDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 307.0
margin_bottom = 95.5
popup_exclusive = true
resizable = true
dialog_autowrap = true

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 612.0
margin_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/ScrollContainer"]

[node name="courseContainer" type="VBoxContainer" parent="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true

[node name="PanelContainer2" type="PanelContainer" parent="HSplitContainer/VSplitContainer"]
margin_top = 674.0
margin_right = 626.0
margin_bottom = 706.0
size_flags_stretch_ratio = 8.48

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/VSplitContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 619.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="HSplitContainer/VSplitContainer/PanelContainer2/VBoxContainer"]
margin_right = 612.0
margin_bottom = 14.0
text = "SELECTED COURSES:"

[node name="selectedCoursesContainer" type="TextEdit" parent="HSplitContainer/VSplitContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 612.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer"]
margin_left = 638.0
margin_right = 1186.0
margin_bottom = 706.0
script = ExtResource( 2 )
DAY_COLORS = [ Color( 1, 0.631373, 0.631373, 1 ), Color( 0.716613, 0.5698, 0.77, 1 ), Color( 0.659433, 0.73, 0.5183, 1 ), Color( 0.598, 0.737533, 0.92, 1 ), Color( 0.9, 0.8415, 0.666, 1 ), Color( 0.553, 0.79, 0.7268, 1 ) ]
fontTags = ExtResource( 4 )
fontCourses = ExtResource( 1 )

[node name="VolatileLabel" type="Node2D" parent="HSplitContainer/PanelContainer"]
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/HBoxContainer/Button" to="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/HBoxContainer/Button/FileDialog" method="_on_Button_pressed"]
[connection signal="file_selected" from="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/HBoxContainer/Button/FileDialog" to="HSplitContainer/VSplitContainer/PanelContainer/VBoxContainer/HBoxContainer/Button/FileDialog" method="_on_FileDialog_file_selected"]
